--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1410,6 +1410,7 @@ section {
 .product_details {
   width: 100%;
 }
+
 .product_details_title {
   font-weight: 500px;
   line-height: 30px;
@@ -1421,6 +1422,12 @@ section {
   background: #f5f5f5;
   margin-top: 53px;
 }
+.quantity_available {
+   background: #f5f5f5;
+   margin-top: 53px;
+   height: 60px; /* precisa ter altura para centralizar vertical */
+ }
+
 .free_delivery i {
   display: inline-block;
 }
@@ -1447,6 +1454,11 @@ section {
   line-height: 30px;
   margin-top: 21px;
 }
+.original_price.no_compare {
+  margin-top: 15px; /* ajuste fino aqui */
+  min-height: 24px; /* mantém alinhamento visual */
+}
+
 .product_price {
   display: inline-block;
   font-size: 24px;
@@ -1543,6 +1555,20 @@ section {
   padding-right: 20px;
   margin-left: 20px;
 }
+.tt-disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  pointer-events: none; /* deixa totalmente sem clique */
+}
+
+.tt-out-of-stock-msg {
+  margin-top: 12px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #b00020;
+}
+
 .red_button.product-add_to_cart_button a:hover {
   text-decoration: none;
   color: white;
